# YASBM

./: .gitignore  DEPLOY.md  OVERVIEW.md  PROJECT.md  README.md  RESEARCH-V2.md
edge/: .env.example  .env.local.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vercel.json
edge/api/: analyze.ts  upload.ts  verdict.ts
edge/src/: cors.ts  env.ts  r2.ts  verdict-prompt.ts
physics/: README.md  pyproject.toml
physics/kepler_physics/: __init__.py  fit.py  model.py
physics/tests/: test_fit.py
pipeline/: .gitignore  README.md  modal_app.py  pyproject.toml  viewcrafter_app.py
pipeline/kepler_pipeline/: __init__.py  app.py  schema.py
pipeline/kepler_pipeline/stages/: depth.py  lift.py  objects.py  package.py  physics.py  props.py  scene.py  segment.py  track.py
web/: .env.local.example  .gitignore  index.html  package-lock.json  package.json  tsconfig.json
web/src/: App.tsx  index.css
web/src/components/: DynamicPoints.tsx  FlythroughButton.tsx  ObjectList.tsx  Player.tsx  PointCloud.tsx  Props.tsx  ResidualChart.tsx  SceneMesh.tsx  Timeline.tsx  TrackMarkers.tsx  Uploader.tsx  Verdict.tsx  VideoOverlay.tsx  Viewer3D.tsx
web/src/lib/: api.ts
web/src/state/: analysis.ts
web/src/three/: pointCloud.ts
